audio files generated

--- a/DeepfakeDetection.ipynb
+++ b/DeepfakeDetection.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "9e260a62",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -134,46 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "33954692",
+   "execution_count": 6,
+   "id": "1e675815",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.94%\r"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/tools.py:64\u001b[0m, in \u001b[0;36mis_string\u001b[0;34m(obj)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 64\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39misinstance\u001b[39m(obj, basestring)\n\u001b[1;32m     65\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mNameError\u001b[39;00m:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'basestring' is not defined",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=37'>38</a>\u001b[0m         p\u001b[39m.\u001b[39mmap(save_audio_feature, filenames)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=39'>40</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAudio features saved\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m save_audio_file()\n",
-      "\u001b[1;32m/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb Cell 4\u001b[0m in \u001b[0;36msave_audio_file\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, file \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(filenames):\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     clip \u001b[39m=\u001b[39m mp\u001b[39m.\u001b[39mVideoFileClip(path \u001b[39m+\u001b[39m file \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.mp4\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m     clip\u001b[39m.\u001b[39;49maudio\u001b[39m.\u001b[39;49mwrite_audiofile(path \u001b[39m+\u001b[39;49m file \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m.wav\u001b[39;49m\u001b[39m'\u001b[39;49m, verbose\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, logger\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m# print the progress as a percentage\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/markbrub/deepfakeDetection/DeepfakeDetection.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mi \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(filenames) \u001b[39m*\u001b[39m \u001b[39m100\u001b[39m\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m, end\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\r\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[0;32m<decorator-gen-62>:2\u001b[0m, in \u001b[0;36mwrite_audiofile\u001b[0;34m(self, filename, fps, nbytes, buffersize, codec, bitrate, ffmpeg_params, write_logfile, verbose, logger)\u001b[0m\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/decorators.py:54\u001b[0m, in \u001b[0;36mrequires_duration\u001b[0;34m(f, clip, *a, **k)\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mAttribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m'\u001b[39m\u001b[39m not set\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     53\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 54\u001b[0m     \u001b[39mreturn\u001b[39;00m f(clip, \u001b[39m*\u001b[39;49ma, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mk)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/audio/AudioClip.py:206\u001b[0m, in \u001b[0;36mAudioClip.write_audiofile\u001b[0;34m(self, filename, fps, nbytes, buffersize, codec, bitrate, ffmpeg_params, write_logfile, verbose, logger)\u001b[0m\n\u001b[1;32m    201\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[1;32m    202\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mMoviePy couldn\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt find the codec associated \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    203\u001b[0m                          \u001b[39m\"\u001b[39m\u001b[39mwith the filename. Provide the \u001b[39m\u001b[39m'\u001b[39m\u001b[39mcodec\u001b[39m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    204\u001b[0m                          \u001b[39m\"\u001b[39m\u001b[39mparameter in write_audiofile.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 206\u001b[0m \u001b[39mreturn\u001b[39;00m ffmpeg_audiowrite(\u001b[39mself\u001b[39;49m, filename, fps, nbytes, buffersize,\n\u001b[1;32m    207\u001b[0m                          codec\u001b[39m=\u001b[39;49mcodec, bitrate\u001b[39m=\u001b[39;49mbitrate,\n\u001b[1;32m    208\u001b[0m                          write_logfile\u001b[39m=\u001b[39;49mwrite_logfile, verbose\u001b[39m=\u001b[39;49mverbose,\n\u001b[1;32m    209\u001b[0m                          ffmpeg_params\u001b[39m=\u001b[39;49mffmpeg_params,\n\u001b[1;32m    210\u001b[0m                          logger\u001b[39m=\u001b[39;49mlogger)\n",
-      "File \u001b[0;32m<decorator-gen-26>:2\u001b[0m, in \u001b[0;36mffmpeg_audiowrite\u001b[0;34m(clip, filename, fps, nbytes, buffersize, codec, bitrate, write_logfile, verbose, ffmpeg_params, logger)\u001b[0m\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/decorators.py:54\u001b[0m, in \u001b[0;36mrequires_duration\u001b[0;34m(f, clip, *a, **k)\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mAttribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m'\u001b[39m\u001b[39m not set\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     53\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 54\u001b[0m     \u001b[39mreturn\u001b[39;00m f(clip, \u001b[39m*\u001b[39;49ma, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mk)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/audio/io/ffmpeg_audiowriter.py:166\u001b[0m, in \u001b[0;36mffmpeg_audiowrite\u001b[0;34m(clip, filename, fps, nbytes, buffersize, codec, bitrate, write_logfile, verbose, ffmpeg_params, logger)\u001b[0m\n\u001b[1;32m    160\u001b[0m logger(message\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMoviePy - Writing audio in \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m filename)\n\u001b[1;32m    161\u001b[0m writer \u001b[39m=\u001b[39m FFMPEG_AudioWriter(filename, fps, nbytes, clip\u001b[39m.\u001b[39mnchannels,\n\u001b[1;32m    162\u001b[0m                             codec\u001b[39m=\u001b[39mcodec, bitrate\u001b[39m=\u001b[39mbitrate,\n\u001b[1;32m    163\u001b[0m                             logfile\u001b[39m=\u001b[39mlogfile,\n\u001b[1;32m    164\u001b[0m                             ffmpeg_params\u001b[39m=\u001b[39mffmpeg_params)\n\u001b[0;32m--> 166\u001b[0m \u001b[39mfor\u001b[39;00m chunk \u001b[39min\u001b[39;00m clip\u001b[39m.\u001b[39miter_chunks(chunksize\u001b[39m=\u001b[39mbuffersize,\n\u001b[1;32m    167\u001b[0m                               quantize\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    168\u001b[0m                               nbytes\u001b[39m=\u001b[39mnbytes, fps\u001b[39m=\u001b[39mfps,\n\u001b[1;32m    169\u001b[0m                               logger\u001b[39m=\u001b[39mlogger):\n\u001b[1;32m    170\u001b[0m     writer\u001b[39m.\u001b[39mwrite_frames(chunk)\n\u001b[1;32m    172\u001b[0m writer\u001b[39m.\u001b[39mclose()\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/audio/AudioClip.py:85\u001b[0m, in \u001b[0;36mAudioClip.iter_chunks\u001b[0;34m(self, chunksize, chunk_duration, fps, quantize, nbytes, logger)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[39massert\u001b[39;00m(size \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m chunksize)\n\u001b[1;32m     84\u001b[0m tt \u001b[39m=\u001b[39m (\u001b[39m1.0\u001b[39m\u001b[39m/\u001b[39mfps)\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39marange(pospos[i], pospos[i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m])\n\u001b[0;32m---> 85\u001b[0m \u001b[39myield\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mto_soundarray(tt, nbytes\u001b[39m=\u001b[39;49mnbytes, quantize\u001b[39m=\u001b[39;49mquantize,\n\u001b[1;32m     86\u001b[0m                             fps\u001b[39m=\u001b[39;49mfps, buffersize\u001b[39m=\u001b[39;49mchunksize)\n",
-      "File \u001b[0;32m<decorator-gen-61>:2\u001b[0m, in \u001b[0;36mto_soundarray\u001b[0;34m(self, tt, fps, quantize, nbytes, buffersize)\u001b[0m\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/decorators.py:54\u001b[0m, in \u001b[0;36mrequires_duration\u001b[0;34m(f, clip, *a, **k)\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mAttribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m'\u001b[39m\u001b[39m not set\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     53\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 54\u001b[0m     \u001b[39mreturn\u001b[39;00m f(clip, \u001b[39m*\u001b[39;49ma, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mk)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/audio/AudioClip.py:127\u001b[0m, in \u001b[0;36mAudioClip.to_soundarray\u001b[0;34m(self, tt, fps, quantize, nbytes, buffersize)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    118\u001b[0m \u001b[39melif len(tt)> 1.5*buffersize:\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[39m    nchunks = int(len(tt)/buffersize+1)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[39m                      for ttc in tt_chunks])\u001b[39;00m\n\u001b[1;32m    124\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    125\u001b[0m \u001b[39m#print tt.max() - tt.min(), tt.min(), tt.max()\u001b[39;00m\n\u001b[0;32m--> 127\u001b[0m snd_array \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_frame(tt)\n\u001b[1;32m    129\u001b[0m \u001b[39mif\u001b[39;00m quantize:\n\u001b[1;32m    130\u001b[0m     snd_array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmaximum(\u001b[39m-\u001b[39m\u001b[39m0.99\u001b[39m, np\u001b[39m.\u001b[39mminimum(\u001b[39m0.99\u001b[39m, snd_array))\n",
-      "File \u001b[0;32m<decorator-gen-28>:2\u001b[0m, in \u001b[0;36mget_frame\u001b[0;34m(self, t)\u001b[0m\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/decorators.py:85\u001b[0m, in \u001b[0;36mpreprocess_args.<locals>.wrapper\u001b[0;34m(f, *a, **kw)\u001b[0m\n\u001b[1;32m     82\u001b[0m     func_code \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39m\u001b[39m__code__\u001b[39m \u001b[39m# Python 3\u001b[39;00m\n\u001b[1;32m     84\u001b[0m names \u001b[39m=\u001b[39m func_code\u001b[39m.\u001b[39mco_varnames\n\u001b[0;32m---> 85\u001b[0m new_a \u001b[39m=\u001b[39m [fun(arg) \u001b[39mif\u001b[39;00m (name \u001b[39min\u001b[39;00m varnames) \u001b[39melse\u001b[39;00m arg\n\u001b[1;32m     86\u001b[0m          \u001b[39mfor\u001b[39;00m (arg, name) \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(a, names)]\n\u001b[1;32m     87\u001b[0m new_kw \u001b[39m=\u001b[39m {k: fun(v) \u001b[39mif\u001b[39;00m k \u001b[39min\u001b[39;00m varnames \u001b[39melse\u001b[39;00m v\n\u001b[1;32m     88\u001b[0m          \u001b[39mfor\u001b[39;00m (k,v) \u001b[39min\u001b[39;00m kw\u001b[39m.\u001b[39mitems()}\n\u001b[1;32m     89\u001b[0m \u001b[39mreturn\u001b[39;00m f(\u001b[39m*\u001b[39mnew_a, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mnew_kw)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/decorators.py:85\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     82\u001b[0m     func_code \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39m\u001b[39m__code__\u001b[39m \u001b[39m# Python 3\u001b[39;00m\n\u001b[1;32m     84\u001b[0m names \u001b[39m=\u001b[39m func_code\u001b[39m.\u001b[39mco_varnames\n\u001b[0;32m---> 85\u001b[0m new_a \u001b[39m=\u001b[39m [fun(arg) \u001b[39mif\u001b[39;00m (name \u001b[39min\u001b[39;00m varnames) \u001b[39melse\u001b[39;00m arg\n\u001b[1;32m     86\u001b[0m          \u001b[39mfor\u001b[39;00m (arg, name) \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(a, names)]\n\u001b[1;32m     87\u001b[0m new_kw \u001b[39m=\u001b[39m {k: fun(v) \u001b[39mif\u001b[39;00m k \u001b[39min\u001b[39;00m varnames \u001b[39melse\u001b[39;00m v\n\u001b[1;32m     88\u001b[0m          \u001b[39mfor\u001b[39;00m (k,v) \u001b[39min\u001b[39;00m kw\u001b[39m.\u001b[39mitems()}\n\u001b[1;32m     89\u001b[0m \u001b[39mreturn\u001b[39;00m f(\u001b[39m*\u001b[39mnew_a, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mnew_kw)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/tools.py:94\u001b[0m, in \u001b[0;36mcvsecs\u001b[0;34m(time)\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[39m\"\"\" Will convert any time into seconds. \u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[39m\u001b[39;00m\n\u001b[1;32m     72\u001b[0m \u001b[39mIf the type of `time` is not valid, \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[39m33.5\u001b[39;00m\n\u001b[1;32m     91\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     92\u001b[0m factors \u001b[39m=\u001b[39m (\u001b[39m1\u001b[39m, \u001b[39m60\u001b[39m, \u001b[39m3600\u001b[39m)\n\u001b[0;32m---> 94\u001b[0m \u001b[39mif\u001b[39;00m is_string(time):     \n\u001b[1;32m     95\u001b[0m     time \u001b[39m=\u001b[39m [\u001b[39mfloat\u001b[39m(f\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m)) \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m time\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m)]\n\u001b[1;32m     97\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(time, (\u001b[39mtuple\u001b[39m, \u001b[39mlist\u001b[39m)):\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/moviepy/tools.py:64\u001b[0m, in \u001b[0;36mis_string\u001b[0;34m(obj)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[39m\"\"\" Returns true if s is string or string-like object,\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \u001b[39mcompatible with Python 2 and Python 3.\"\"\"\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 64\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39misinstance\u001b[39m(obj, basestring)\n\u001b[1;32m     65\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mNameError\u001b[39;00m:\n\u001b[1;32m     66\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39misinstance\u001b[39m(obj, \u001b[39mstr\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Audio files saved\n"
      ]
     }
    ],
@@ -185,7 +156,7 @@
     "    import moviepy.editor as mp\n",
     "    from multiprocessing import Pool\n",
     "\n",
-    "    def save_audio_file():\n",
+    "    def save_audio_files():\n",
     "        for i, file in enumerate(filenames):\n",
     "            clip = mp.VideoFileClip(path + file + '.mp4')\n",
     "            clip.audio.write_audiofile(path + file + '.wav', verbose=False, logger=None)\n",
@@ -214,12 +185,12 @@
     "        np.save(path + file + '.npy', mfcc)\n",
     "\n",
     "    def save_audio_feature_parallel():\n",
-    "        with Pool() as p:\n",
+    "        with Pool(16) as p:\n",
     "            p.map(save_audio_feature, filenames)\n",
     "\n",
     "        print('Audio features saved')\n",
     "\n",
-    "    save_audio_file()\n",
+    "    # save_audio_files()\n",
     "    # save_audio_feature_parallel()\n",
     "\n",
     "# print the shape of a sample audio file\n",
@@ -349,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
