--- a/DeepfakeDetection.ipynb
+++ b/DeepfakeDetection.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9e260a62",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-09 02:43:29.922807: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-03-09 02:43:30.086617: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-03-09 02:43:30.091632: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-03-09 02:43:31.648616: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -72,7 +83,7 @@
        "fckxaqjbxk.mp4  FAKE  vpmyeepbep.mp4"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,6 +94,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import cv2\n",
+    "import tensorflow as tf\n",
     "\n",
     "# read the metadata.json file\n",
     "with open('metadata.json') as f:\n",
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d658aeb3",
    "metadata": {},
    "outputs": [
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "082680fa",
    "metadata": {},
    "outputs": [],
@@ -144,12 +156,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Audio files saved\n"
+      "(32, 300)\n"
      ]
     }
    ],
    "source": [
-    "PROCESS_AUDIO = True\n",
+    "PROCESS_AUDIO = False\n",
     "\n",
     "if PROCESS_AUDIO:\n",
     "    import librosa\n",
@@ -190,60 +202,88 @@
     "\n",
     "        print('Audio features saved')\n",
     "\n",
-    "    # save_audio_files()\n",
-    "    # save_audio_feature_parallel()\n",
+    "    save_audio_files()\n",
+    "    save_audio_feature_parallel()\n",
     "\n",
     "# print the shape of a sample audio file\n",
-    "# print(np.load(path + filenames[0] + '.npy').shape)"
+    "print(np.load(path + filenames[0] + '.npy').shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1d31af3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-09 02:43:34.995825: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype string and shape [8]\n",
+      "\t [[{{node Placeholder/_0}}]]\n",
+      "2023-03-09 02:43:34.996320: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype string and shape [8]\n",
+      "\t [[{{node Placeholder/_0}}]]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "path = 'data/'\n",
-    "\n",
     "# create a tensorflow dataset\n",
     "dataset = tf.data.Dataset.list_files(path + '*.mp4')\n",
     "\n",
     "def preprocess_video(video):\n",
-    "    return video\n",
+    "    # resize the video to 128x128\n",
+    "    video = tf.image.resize(video, (128, 128))\n",
     "\n",
-    "def preprocess_audio(audio):\n",
-    "    return audio\n",
+    "    # convert the video to float32\n",
+    "    video = video.astype(np.float32)\n",
+    "\n",
+    "    # normalize the video\n",
+    "    video = video / 255.0\n",
+    "\n",
+    "    return video\n",
     "\n",
     "def preprocess_input(file):\n",
     "    # all videos are 300 frames long\n",
     "    # load the video\n",
     "    video = cv2.VideoCapture(file)\n",
-    "    audio = librosa.load(file)\n",
+    "    audio = np.load(file[:-4] + '.npy')\n",
     "\n",
     "    # Extract visual frames and audio samples\n",
-    "    visual_frames = []\n",
-    "    audio_samples = []\n",
+    "    frames = []\n",
     "\n",
     "    # loop through the video and extract the frames\n",
     "    for i in range(300):\n",
     "        ret, frame = video.read()\n",
-    "        visual_frames.append(frame)\n",
+    "        frames.append(frame)\n",
+    "\n",
+    "    # convert the frames to a numpy array\n",
+    "    frames = np.array(frames)\n",
+    "\n",
+    "    # preprocess the video\n",
+    "    frames = preprocess_video(frames)\n",
     "    \n",
-    "    # break the audio into 300 samples\n",
-    "    audio_samples = librosa.util.frame(audio, frame_length=300, hop_length=300)\n",
-    "\n",
-    "    return visual_frames, audio_samples\n",
-    "\n",
-    "\n",
-    "\n",
+    "    return frames, audio\n",
     "        \n",
     "\n",
     "# preprocess the video and audio for the first video\n",
-    "for video in dataset.take(1):\n",
-    "    video, audio = preprocess_input(video.numpy().decode('utf-8'))\n",
+    "for file in dataset.take(1):\n",
+    "    video, audio = preprocess_input(file.numpy().decode('utf-8'))\n",
     "\n",
     "    print(f'Video shape: {video.shape}')\n",
     "    print(f'Audio shape: {audio.shape}')"
@@ -320,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
